--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -2,9 +2,9 @@
 parameters:
     database_host: 127.0.0.1
     database_port: null
-    database_name: symfony
+    database_name: curso_symfony_raul_fraile
     database_user: root
-    database_password: null
+    database_password: capullo100
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
