--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "name": "pascualmg/apigator",
     "description": "Symfony Service Request/Response API REST CURL client",
-    "authors": 
+    "authors": [ 
         {
             "name": "Pascual Muñoz Galián",
             "email": "pascual.munoz@pccomponentes.com"
-        },
+        }
+    ],
     "type": "project",
     "autoload": {
         "psr-4": {
