--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "pascual.munoz@pccomponentes.com"
         }
     ],
+    "minimum-stability": "dev",
     "type": "project",
     "autoload": {
         "psr-4": {
