composer.json minimum-stability 'stable' para que no de problemas al usarlo , aunque por supuesto , debería de dejarse en dev por ahora.

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "email": "pascual.munoz@pccomponentes.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "type": "project",
     "autoload": {
         "psr-4": {
